pipeline/ce
adagrad.cpp:48:74: error: conversion from ‘<brace-enclosed initializer list>’ to ‘std::string {aka std::basic_string<char>}’ is ambiguous
 string agentFname = {"agent_dse_train", "agent_dse_val", "agent_dse_test"};
                                                                          ^
adagrad.cpp:48:74: note: candidates are:
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from adagrad.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:462:7: note: std::basic_string<_CharT, _Traits, _Alloc>::basic_string(const std::basic_string<_CharT, _Traits, _Alloc>&, std::basic_string<_CharT, _Traits, _Alloc>::size_type, std::basic_string<_CharT, _Traits, _Alloc>::size_type) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int] <near match>
       basic_string(const basic_string& __str, size_type __pos,
       ^
/usr/include/c++/4.8/bits/basic_string.h:462:7: note:   no known conversion for argument 3 from ‘const char [15]’ to ‘std::basic_string<char>::size_type {aka long unsigned int}’
/usr/include/c++/4.8/bits/basic_string.h:522:7: note: std::basic_string<_CharT, _Traits, _Alloc>::basic_string(std::initializer_list<_Tp>, const _Alloc&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       basic_string(initializer_list<_CharT> __l, const _Alloc& __a = _Alloc());
       ^
/usr/include/c++/4.8/bits/basic_string.h:522:7: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::initializer_list<char>’
adagrad.cpp:49:78: error: conversion from ‘<brace-enclosed initializer list>’ to ‘std::string {aka std::basic_string<char>}’ is ambiguous
 string targetFname = {"target_dse_train", "target_dse_val", "target_dse_test"};
                                                                              ^
adagrad.cpp:49:78: note: candidates are:
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from adagrad.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:462:7: note: std::basic_string<_CharT, _Traits, _Alloc>::basic_string(const std::basic_string<_CharT, _Traits, _Alloc>&, std::basic_string<_CharT, _Traits, _Alloc>::size_type, std::basic_string<_CharT, _Traits, _Alloc>::size_type) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int] <near match>
       basic_string(const basic_string& __str, size_type __pos,
       ^
/usr/include/c++/4.8/bits/basic_string.h:462:7: note:   no known conversion for argument 3 from ‘const char [16]’ to ‘std::basic_string<char>::size_type {aka long unsigned int}’
/usr/include/c++/4.8/bits/basic_string.h:522:7: note: std::basic_string<_CharT, _Traits, _Alloc>::basic_string(std::initializer_list<_Tp>, const _Alloc&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       basic_string(initializer_list<_CharT> __l, const _Alloc& __a = _Alloc());
       ^
/usr/include/c++/4.8/bits/basic_string.h:522:7: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::initializer_list<char>’
adagrad.cpp:977:1: error: prototype for ‘Classifier::Classifier(unsigned int, std::string*, double)’ does not match any in class ‘Classifier’
 Classifier::Classifier(uint _nhf, string _fname[3], double _factor){
 ^
adagrad.cpp:124:7: error: candidates are: Classifier::Classifier(Classifier&&)
 class Classifier{
       ^
adagrad.cpp:124:7: error:                 Classifier::Classifier(const Classifier&)
adagrad.cpp:126:3: error:                 Classifier::Classifier(unsigned int, std::string, double)
   Classifier(uint _nhf, string _fname, double _factor);
   ^
